--- a/styles/printer.scss
+++ b/styles/printer.scss
@@ -5,7 +5,7 @@ body.printer
     header
     {
         display: block;
-        background-color:$color-primary-foreground;
+        background-color: $color-primary-foreground;
         height: 12vh;
       
         
@@ -14,7 +14,7 @@ body.printer
             width: 7%;
             margin: 3vh 10vw 0vh 0vw;
             float:right;
-            border: 10px solid red;
+            border: 10px solid $color-primary-foreground;
             padding:3vw;
         }
 
@@ -22,14 +22,23 @@ body.printer
         { 
             height: 40%;
             width: auto;
-            margin: 4vh 10vw 0vh 10vw;
+            margin: 3vh 10vw 0vh 10vw;
         
         }
-    }    
+
+        .back
+        {
+            height: 40%;
+            float:right;
+            margin: 1.5vh 10vw 0 0;
+            border: 10px solid white;
+            padding:3vw;
+        }
+    }  
+    
     
     h1 
     {
-        
         text-transform: uppercase;
         font-size: 5em;
         padding: 12vh 0 0 10vw;
@@ -39,7 +48,6 @@ body.printer
 
     h2 
     {
-        
         font-size: 2.9em;
         padding: 8vh 0 0 10vw;
         color:$color-highlight-foreground;
@@ -47,21 +55,9 @@ body.printer
         width: 80%;
         
     } 
-
-    div.Todo
-    {
-        
-        font-size: 3em;
-        font-weight: bold;
-        padding: 8vh 0 0 10vw;
-        color:$color-highlight-foreground;
-        top: 40vh;
-        width: 80%;
-        
-    } 
+ 
     h3 
     {
-        
         font-size: 2.5em;
         padding: 12vh 0 0 10vw;
         color:$color-highlight-foreground;
@@ -73,7 +69,6 @@ body.printer
 
     h5 
     {
-        
         font-size: 2.5em;
         padding: 4vh 0 0 10vw;
         color:$color-highlight-foreground;
@@ -81,135 +76,138 @@ body.printer
         margin:0;
     } 
 
+    h6
+    {
+        font-size: 3em;
+        font-weight: bold;
+        color:$color-secondary-background;
+        padding: 20vh 0 0 10vw;
+        width: 80%;
+        margin: 0;
+    } 
+
+    .list-button
+    {
+        background-color: $color-primary-shadowred;
+        color: $color-highlight-foreground;
+        text-align: left;
+        font-size: 2.5em;
+        font-weight: bold;
+        box-sizing: border-box;
+        padding-left: 2vw;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    .list-button:hover, input:checked + label.list-button
+    {
+        background-color: $color-highlight-foreground;
+        color: black; 
+    }
+
     div.site-content 
     {
         background-color:$color-primary-background;
         height: 60vh; 
-        width: 100%; 
-        text-overflow: ellipsis;
-      
-        input#txtFind
-        {
-            margin:3vh 0 0 10vw;
-            font-size:2.5em;
-            font-weight: bold;
-            width:75%;
-            height: 5vh;
-            padding-left: 5vw;
-        }
+        width: 100%;
+        position: relative;
 
-
-        .flex-container  
+        section #waitPopup
         {
-            
-            display: flex;
-            flex-wrap: wrap;
-        } 
-            
+
+            background-color:$color-primary-background;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0; 
+        }        
+        #wait
+        {
+            width: 10vw;
+            margin: 0 20vh 0 43vw;
+        }         
+    }   
+
+    .Todo, .Todo2
+    {
+        margin:0;
+        padding: 4vh 0 0 0vw;
+        top: 20vh;
     
-        ul
-        {
-            list-style:none; 
-        }
-
-        .flex-container > li
-        {
-
-            background-color:$color-primary-shadowred;
-            width: 40%;
-            margin: 2vh 0 0 5vw;
-            text-align: left;
-            line-height: 6vh;
-            font-size: 2.5em;
-            font-weight: bold;
-            color: $color-highlight-foreground;
-
-            label
-            {
-                padding-left: 2vw;
-            }
-
-            a
-            {
-                margin-left: 1.5vw;
-                color: $color-highlight-foreground;
-            }
-        }        
-   
-        .flex-container > li:hover:not(.active)
-        {
-            background-color: $color-highlight-foreground;
-            color: black; 
-        }        
-        
-        .flex-container a:hover:not(.active)
-        {
-            background-color: $color-highlight-foreground;
-            color: black;
-        }
-        
-
-        input
-        {
-            display:none;
-        }
-       
-
-        #btnOK2
-        { 
-            display: block;
-            font-size: 4em;
-            color:black;
-            padding: 0.5vh 1.5vw 0.5vh 1.5vw;
-            border: 3px solid $color-primary-background;
-            border-radius: 8px;
-            background-color: $color-highlight-foreground;
-            float: right;
-            margin: 25vh 10vw 0;
-
-            &:hover:not(.active)
-            {
-                background-color: $color-primary-background;
-                color:$color-highlight-foreground;
-            }
-        }   
-        
         p
         {
-            font-size: 2.5em;
-            padding: 4vh 0 0 10vw;
-            color:red;
-            width: 80%;
-            margin:0;
-        }    
-        .Todo
-        {
-            margin:0;
-            padding: 8vh 0 0 0vw;
-            top: 20vh;
-            width: 80%;
-        
-            p
-            {
-            font-size: 1em;
+            font-size: 3em;
             font-weight: bold;
-            color:white;
-            }     
+            color:$color-primary-foreground;
+            padding: 2vh 0 0 10vw;
+            width: 80%;
+            margin: 0;
+        } 
+    }
+
+    input#txtFind
+    {
+        margin: 3vh 0 0 10vw;
+        font-size: 2.5em;
+        font-weight: bold;
+        width: 75%;
+        height: 5vh;
+        padding-left: 5vw;
+    }
+
+    .flex-container  
+    {
+        display: flex;
+        flex-wrap: wrap;
+        
+        .list-button
+        {
+            display: block;
+            width: 37.5vw;
+            margin: 2vh 0 0 5vw;
+            height: 6vh;
+            line-height: 6vh;
+        }        
+    }
+
+    ul
+    {
+        list-style:none;
+        padding: 0 0 0 5vw;
+        margin: 0;
+    }
+
+    input[name="ap"]
+    {
+        display: none;
+    }
+
+    #btnOK2
+    { 
+        display: block;
+        font-size: 4em;
+        color:black;
+        padding: 0.5vh 1.5vw 0.5vh 1.5vw;
+        border: 3px solid $color-primary-background;
+        border-radius: 8px;
+        background-color: $color-highlight-foreground;
+        float: right;
+        margin: 25vh 10vw 0;
+
+        &:hover
+        {
+            background-color: $color-primary-background;
+            color:$color-highlight-foreground;
         }
-
-    } 
-
-
-        
-        
-        
-
-
+    }   
+    
 
     fieldset
     {
         border: 0px;
-        margin:0;
+        margin: 0;
+        padding: 0;
 
         #keyboard
         {
@@ -235,7 +233,7 @@ body.printer
                     width: 2em;
 
                 } 
-                a:hover:not(.active)
+                a:hover
                 {
                     background-color: $color-primary-background;
                     color: $color-highlight-foreground;
@@ -251,7 +249,7 @@ body.printer
                     border-radius: 8px;
                 }
 
-                a:hover:not(.active)
+                a:hover
                 {
                     background-color: $color-primary-background;
                     color:$color-highlight-foreground;
@@ -268,7 +266,7 @@ body.printer
 
                 }
 
-                #btnOK:hover:not(.active)
+                #btnOK:hover
                 {
                     background-color: $color-primary-background;
                     color:$color-highlight-foreground;
@@ -294,7 +292,7 @@ body.printer
         }
         
 
-        a:hover:not(.active)
+        a:hover
         {
             background-color: $color-secondary-background;
             color: $color-primary-foreground;
