--- a/printer/P1_Appointment.cshtml
+++ b/printer/P1_Appointment.cshtml
@@ -64,7 +64,7 @@
     <div class="sonderzeichen">
         <a data-key=" " role="button">Leerzeichen</a>
         <a role="button">-</a>
-        <button id="btnOK">Weiter</button>
+        <button id="btnOK">OK</button>
     </div>
   </div>
 </fieldset>
