--- a/printer/P1_GetTicket.cshtml
+++ b/printer/P1_GetTicket.cshtml
@@ -36,7 +36,7 @@
   </div>
 
   @* wait popup is shown, while generating a new number *@
-  <section id="waitPopup" style="display: none;">
+  <section id="waitPopup" style="display: block;">
     <h1>SO GEHT‘S WEITER.</h1>
     <div class="Todo2">
     <p>Ziehen Sie ihr Ticket und machen Sie es sich auf dem Sofa bequem.</p><p>Wir sind ruckzuck für Sie da.</p>
