--- a/printer/P1_GetTicket.cshtml
+++ b/printer/P1_GetTicket.cshtml
@@ -25,7 +25,7 @@
           if (!String.IsNullOrEmpty((string)Model.Style["text" + i].Value)) {
             var queueid = Model.Style["queueid" + i].Value;
             <li>
-              <a class="list-button" href='@Model.Navigate("PrinterTicket.cshtml", new { queueid=queueid, cat=Model.Style["catid" + i].Value })" data-label="@((string)Model.Style["text" + i].Value)'>
+              <a class="list-button" href='@Model.Navigate("PrinterTicket.cshtml", new { index=i })'>
                 @((string)Model.Style["text" + i].Value)
               </a>
             </li>
@@ -56,9 +56,7 @@
    *@
   function hookupButtons() {
     $(".list-button").unbind()
-    .click(function() {
-      $("[data-name]").text($(this).data("label"));
-    }).printTicket({
+    .printTicket({
       legacy: false,
       printErrorTimeout: 60000,
       stripBody: false,
