--- a/printer/P0_Main.cshtml
+++ b/printer/P0_Main.cshtml
@@ -16,7 +16,7 @@ Printer main entry page
 }
 <div class="site-content">
   <h1>HERZLICH WILLKOMMEN!</h1>
-  <h2>Schön, dass Sie da sind. Haben Sie einen Termin vereinbart?</h2>
+  <h2>Schön, dass Sie da sind.<br>Haben Sie einen Termin vereinbart?</h2>
 </div>
 
 <nav class="site-nav">
