--- a/printer/PrinterTicket.cshtml
+++ b/printer/PrinterTicket.cshtml
@@ -27,22 +27,25 @@
 @Scripts.Render("js/jquery.qrcode.js")
 <section class="ticket">
   <header>
-    @DateTime.Now.ToString("dd.MM.yyyy")&emsp;
-    @DateTime.Now.ToString("HH:mm")Uhr
-  </header>
+  <h4>HERZLICH WILLKOMMEN</h4>
+  <h5>bei Ihrer Berliner Volksbank</h5>
+  </header> 
+  <p>Machen Sie es sich kurz bequem.<br>Wir sind gleich pers&#246;nlich f&#252;r Sie da.</p>
+  <p>Ihre Beratungs-Nr.</p>
   <h1>
     @ticket.Number
   </h1>
   <img src="@Href(ticket.IconUrl)">
-  <img src="images/separation.png" class="separation" alt="Trennung">
   <section class="qrcode">
     @if (withQrCode) {
-    <h4>Aufruf verfolgen</h4>
     <a href="@Href("App.cshtml", new {id=ticket.Id, tracking_id})"></a>
-    }
-    <img src="images/customerlogo.png" class="customerlogo" alt="Ersatztext">
+    }  
+  <h6>Kleiner Tipp:</h6>
+  <p>QR-Code scannen, um Ihre Position auch online zu verfolgen.</p>
   </section>
   <footer>
+  
+    @DateTime.Now.ToString("dd.MM.yyyy")&emsp;
   </footer>
 </section>
 <script type="text/javascript">
