--- a/styles/printer.scss
+++ b/styles/printer.scss
@@ -40,18 +40,19 @@ body.printer
     h1 
     {
         text-transform: uppercase;
-        font-size: 5em;
+        font-size: 7em;
         padding: 12vh 0 0 10vw;
+        width: 80%;
         color:$color-highlight-foreground;
         margin:0;
     } 
 
     h2 
     {
-        font-size: 2.9em;
-        padding: 8vh 0 0 10vw;
+        font-size: 3em;
+        padding: 12vh 0 0 10vw;
         color:$color-highlight-foreground;
-        top: 40vh;
+        margin:0;
         width: 80%;
         
     } 
@@ -66,6 +67,15 @@ body.printer
         margin:0;
     } 
 
+    h4 
+    {
+        text-transform: uppercase;
+        font-size: 5em;
+        padding: 10vh 0 0 10vw;
+        width: 80%;
+        color:$color-highlight-foreground;
+        margin:0;
+    }
 
     h5 
     {
@@ -81,7 +91,7 @@ body.printer
         font-size: 3em;
         font-weight: bold;
         color:$color-secondary-background;
-        padding: 18vh 0 0 10vw;
+        padding: 15vh 0 0 10vw;
         width: 80%;
         margin: 0;
     } 
@@ -140,7 +150,7 @@ body.printer
             font-size: 3em;
             font-weight: bold;
             color:$color-primary-foreground;
-            padding: 2vh 0 0 10vw;
+            padding: 5vh 0 0 10vw;
             width: 80%;
             margin: 0;
         } 
@@ -174,7 +184,7 @@ body.printer
     ul
     {
         list-style:none;
-        padding: 0 0 0 5vw;
+        padding: 3vh 0 0 5vw;
         margin: 0;
     }
 
@@ -315,6 +325,6 @@ body.printer
             font-size: 2.5em;
             padding-left: 2vw;
         }   
-          
+    
     }
 }  
