--- a/styles/app.scss
+++ b/styles/app.scss
@@ -33,13 +33,14 @@ html, body
 
 header
 {
-    background-color: $color-primary-background;
-    color: $color-primary-foreground;
+    background-color: $color-primary-foreground;
+    color:$color-primary-background;
 
-    .plattform
-    { 
+    .plattformlogo
+    {
         position: absolute;
     }
+
 
     h1
     {
@@ -47,27 +48,36 @@ header
         font-size: 1rem;
     }
 
+    
+
     @media (orientation: landscape)
     {
         height: 10vh;
         width: 100%;
         
-        .plattform
+        .plattformlogo
         { 
             width: auto;
-            height: 4vh;
-            margin: 3vh 15vw;
-            
+            height: 2vh;
+            margin: 4vh 0 0 10vw;
+
         }
 
         h1
         {
             position: absolute;
-            font-size: .75rem;
-            margin: 3vh 20vw;
+            font-size: 0.65 rem;
+            margin: 4vh 0 0 20vw;
             max-width: 70%;
         }
 
+        h2
+        {
+            padding: 1vh 0 1vh 10vw;
+            font-size: 1em;
+            color:red;
+
+        }
         div.number
         {
             p
@@ -86,15 +96,15 @@ header
     {
         height: 15vh;
 
-        .plattform
+        .plattformlogo
         { 
-            width: 3%;
-            margin: 10vh 15vw;
+            width: 20%;
+            margin: 8vh 0 0 5vw;
         }
 
         h1
         {
-            margin: 10vh 20vw;
+            margin: 8vh 0vw 0 30vw;
         }
 
         div.number
@@ -105,18 +115,6 @@ header
             }
         }
         
-    }
-}
-
-section.logo
-{
-    height: 10vh;
-
-    img 
-    {
-        width: 11vw;
-        margin: 10vh 2vw 0vh 2vw;
-        opacity: 0.5;
     }
 }
 
@@ -154,64 +152,33 @@ section.logo
 section.content
 {
     position: relative;
-    margin: 0 15vw;
-    height: 60vh;
+    max-height: 60vh;
+    background-color:$color-primary-background;
     
-    h2 
-    {
-        color:$color-primary-foreground;
-        background-color: $color-primary-background;
-
-        font-size: .75rem;
-        line-height: 2vh;
-        padding: 2vh 3vw;  
-    }
-    
-    @media (orientation: landscape)
-    {
-        h2
-        {
-            text-align: left;
-            font-size: .65rem;
-        } 
-    }
-
-    @media (orientation: portrait)
-    {
-        h2
-        {
-            text-align: right;
-        }
-    }
 
    
     article
     {
-        background-color: $color-secondary-background;
-        color:$color-secondary-foreground;
+        color:$color-primary-foreground;
+        padding: 8vh 0 0 10vw;
+        font-size: 1em;
+        font-weight: bold;
+        width: 80%;
 
-        box-sizing: border-box;
-        padding: 0vh 3vw;
-        font-size: 0.75rem;
 
         /* personenanzahl */
         svg
          {
-            width: 20%;
+            width: 25%;
             max-height: 19vh;
-            float: right;
-            padding: 1vh 2vw;
-            .cls-1{fill:$color-secondary-foreground;}
-            .cls-2{font-size:1em; fill:$color-highlight-foreground;}
+            padding: 5vh 25vw 0 33vw;
+            .cls-1{fill:$color-primary-foreground;opacity: 0.25;}
+            .cls-2{font-size:0.35em; fill:$color-primary-foreground;}
          }
 
-        #bold
-        {
-            font-weight: bold;
-        }
         #three
         {
-            font-size: 0.75rem;
+            font-size: 0.35rem;
             margin-top: 3vh;   
         }
     }
@@ -219,94 +186,56 @@ section.content
 
     div.number
     {
-        background-color: $color-primary-background;
-        color: $color-primary-foreground;
+        color: green; 
+        margin: 10vh 0 0 0;
+        width: 90vw;
+        display: flex;
+     
 
-        box-sizing: border-box;
-        padding: 2vh 2vw;    
-        
-        h3
-            {   
-            text-align: left;
-            line-height: 3vh;
-            max-width: 60%;
-            font-size: 0.75rem;
-            font-weight: normal;
-            }
+        h3.flex-item1 
 
-        h4
+        {  
+        background-color:$color-primary-foreground;
+        opacity: 0.25;
+        padding: 1vh 0 1vh 10vw;
+        width: 35vw;
+        height:2vh;
+        font-size: 0.75em;
+    
+          
+        }
+       
+        h4.flex-item2 
         {
+            background-color:$color-primary-foreground;
+            opacity: 0.25;
+            margin:0;
+            padding: 1vh 0 1vh 0;
+            width: 15vw;
+            height:2vh;
             text-align: center;
-            font-size: 2rem;
-            line-height: 3vh;
-            padding: 5vh 1vw 5vh 1vw; 
         }
+        
+
+        p.flex-item3 
+        {
+            margin:0;
+            font-size: 0.65em;
+            line-height: 2vh;
+            padding: 1vh 0vw 1vh 5vw;
+            color:$color-primary-foreground;
+
+
+        }
+
+        .no 
+        {
+            flex-wrap: nowrap;
+        }
+
     }
 
-    div.notch 
-    {
-        position: absolute;
-        svg 
-        {
-            fill:$color-secondary-background; 
-        }
-    }
 
-    @media (orientation: landscape)
-    {
-        article 
-        {
-            height: 52vh;
-            width: 50%;
-            float: left;
-        }
-        div.number
-        {
-            height: 52vh;
-            width: 50%;
-            float: left;
-
-            h3
-            {
-                padding: 1vh 1vw;
-            }
-        }
-        div.notch 
-        {
-            left: 50%;
-            top: 10vh;
-            transform: rotate(-90deg);   
-        }
-
-        div.number
-        {
-            h4
-            {
-                padding: 15vh 1vw 5vh 1vw; 
-            }  
-        }
-    }
-
-    @media (orientation: portrait)
-    {     
-        article 
-        {
-            height: 26vh;
-        }
-        div.number
-        {
-            height: 26vh;
-            
-            h3
-            {
-                padding: 0vh 1vw; 
-            }
-        }
-        div.notch 
-        {
-            left: 60%;
-        }
-    }
 }
 
 section.room
@@ -325,63 +254,28 @@ section.room
         font-weight: bold;
     }
         
-
-    div.number
-    {
-        h4
-        {
-            text-align: center;
-            font-size: 2rem;
-            line-height: 3vh;
-
-        }
-    }
 }
 
-section.danke
-{   
-   
-    article   
-    {
-       
-        h3
-        {
-        font-size: 1rem;
-        text-align: center;
-        padding: 10vh 0vw 1vh 0vw; 
-        }
-    } 
+.Todo
+{
+    margin:0;
+    padding: 4vh 0 0 0vw;
+    top: 20vh;
 
-    #bold
+    p
     {
+        font-size: 1em;
         font-weight: bold;
-    }
-    
-
-    div.number
-    {
-        p
-        {
-            text-align: center;
-            font-size: 1rem;
-            padding: 5vh 1vw 5vh 1vw; 
-        }
+        color:$color-secondary-background;
+        padding: 0 0 0 10vw;
+        width: 80%;
+        margin: 0;
     } 
-        
-}      
+}
+
+     
 /* fehlermeldung */
 #error
 {
     background-color: $color-highlight-background;
-}
-
-footer
-{
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    text-align: center;
-    height: 5vh;
-    margin: 2vh 15vw;
 }
