--- a/printer/App.cshtml
+++ b/printer/App.cshtml
@@ -21,15 +21,12 @@
     Laden ...
   </section>
 </div>
-<div id="error" style="display: none;">
+<div id="error" style="display: block;">
  <h2>Fehler aufgetreten!</h2>
  <p>Bitte begeben Sie sich in den Wartebereich!</p>
 </div>
 
 <footer>
-  <div class="Todo">
-    <p>Wir sind ruckzuck f&#252;r Sie da.</p>
-  </div>
 </footer>
 
 @Scripts.Render("~/Scripts/jquery")
