--- a/printer/AppContent.cshtml
+++ b/printer/AppContent.cshtml
@@ -12,9 +12,8 @@ case WaitNumberState.Parked:
   var status = Vocatis.GetTicketWaitInfo(id);
   if (ticket.State == WaitNumberState.Waiting && status.Position < 3) {
 <section class="main content">
-  <h2>Warteschlange</h2>
   <article>
-    <p>Es befinden sich noch <b>@status.Position Kunden</b> vor Ihnen</p>     
+    <p>Es sind noch @status.Position Kunden vor Ihnen</p>     
     
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39.7 71.2">
       <path class="cls-1" d="M11.6,14.3A6.51,6.51,0,0,0,18.1,8h0a6.38,6.38,0,0,0-6.5-6.3A6.45,6.45,0,0,0,5.1,8a6.51,6.51,0,0,0,6.5,6.3h0" transform="translate(1)"/>
@@ -23,12 +22,19 @@ case WaitNumberState.Parked:
       <path class="cls-1" d="M23.3,23a9.15,9.15,0,0,0-5.1-7.9,8.86,8.86,0,0,0-1.7-.8h0a7.52,7.52,0,0,1-9.4,0H6.9C2.8,15.8,0,19.2,0,23V39.4H0a2.71,2.71,0,0,0,2.7,2.4,2.66,2.66,0,0,0,2.2-1.1v27A3.51,3.51,0,0,0,8.4,71h0a3.46,3.46,0,0,0,3.5-3.4V43.4H12V67.7a3.5,3.5,0,0,0,7,0V41.3l.3.1a2.66,2.66,0,0,0,1.2.3,2.64,2.64,0,0,0,2.7-2.4V35.2Z" transform="translate(1)"/>
       <text class="cls-2" text-anchor="middle" transform="translate(12.5 34)">@status.Position</text>
     </svg>
-    <p><b>Bitte halten Sie sich im Wartebereich auf!</b></p>
-    <p id="three">STAND: @DateTime.Now.ToString("HH\\:mm") Uhr</p> 
   </article>
-    <h3>Ihre Wartemarke:</h3>
-    <h4>@ticket.Number</h4>
-</section>
+  <div class="number">
+    <h3 class="flex-item1">Beratungs-Nr.</h3>
+    <h4 class="flex-item2">@ticket.Number</h4>
+    <p id="three" class="flex-item3">STAND: @DateTime.Now.ToString("HH\\:mm") Uhr</p>  
+  </div>  
+</section>  
+<footer>
+  <div class="Todo">
+    <p>Wir sind ruckzuck f&#252;r Sie da.</p>
+  </div>
+</footer>
+
 
 } else {
 
@@ -50,6 +56,11 @@ case WaitNumberState.Parked:
     <p id="three" class="flex-item3">STAND: @DateTime.Now.ToString("HH\\:mm") Uhr</p>  
   </div>
 </section>
+<footer>
+  <div class="Todo">
+    <p>Wir sind ruckzuck f&#252;r Sie da.</p>
+  </div>
+</footer>
   }
 
   break;
@@ -57,18 +68,22 @@ case WaitNumberState.Called:
   var callInfo = Vocatis.GetTicketCallInfo(id);
 
 <section class="room content">
-  <h2>Warteschlange</h2>
-  <article>
-    <p>Ihr Aufruf:</p>   
-    <p id="place">@callInfo.RoomName</p>
-    <p id="three">STAND: @DateTime.Now.ToString("HH\\:mm") Uhr</p>     
+  <article>  
+    <p>Wir beraten Sie an</p>
+    <p id="place">@callInfo.RoomName</p> 
+    <p>Kommen Sie einfach direkt zu uns.</p>
   </article>  
-  <div class="notch"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"><g><path d="M 0.0,0.0 10.0,10.0 20.0,0.0 Z" /></g></svg></div>
-  <div class="number">
-    <h3>Ihre Wartemarke:</h3>
-    <h4>@ticket.Number</h4>
+ <div class="number">
+    <h3 class="flex-item1">Beratungs-Nr.</h3>
+    <h4 class="flex-item2">@ticket.Number</h4>
+    <p id="three" class="flex-item3">STAND: @DateTime.Now.ToString("HH\\:mm") Uhr</p>  
   </div>
 </section>
+<footer>
+  <div class="Todo">
+    <p>Sie sind dran!</p>
+  </div>
+</footer>
   break;
 case WaitNumberState.Dismissed:
 
