--- a/styles/app.scss
+++ b/styles/app.scss
@@ -45,29 +45,28 @@ header
     h1
     {
         position: absolute;
-        font-size: 1rem;
+        font-size: 1em;
     }
 
     
 
     @media (orientation: landscape)
     {
-        height: 10vh;
+        height: 12vh;
         width: 100%;
         
         .plattformlogo
         { 
             width: auto;
-            height: 2vh;
+            height: 5vh;
             margin: 4vh 0 0 10vw;
-
         }
 
         h1
         {
             position: absolute;
-            font-size: 0.65 rem;
-            margin: 4vh 0 0 20vw;
+            font-size: 0.65 em;
+            margin: 4vh 0 0 30vw;
             max-width: 70%;
         }
 
@@ -76,43 +75,22 @@ header
             padding: 1vh 0 1vh 10vw;
             font-size: 1em;
             color:red;
-
-        }
-        div.number
-        {
-            p
-            {
-            padding: 0vh 0vw 1vh 0vw;  
-            }
-
-            h4
-            {
-            padding: 10vh 0vw 1vh 0vw;
-            }
         }
     }
 
     @media (orientation: portrait)
     {
-        height: 15vh;
+        height: 13vh;
 
         .plattformlogo
         { 
-            width: 20%;
+            width: 22%;
             margin: 8vh 0 0 5vw;
         }
 
         h1
         {
             margin: 8vh 0vw 0 30vw;
-        }
-
-        div.number
-        {
-            h4
-            {
-                padding: 5vh 1vw 5vh 1vw; 
-            }
         }
         
     }
@@ -125,7 +103,7 @@ header
     background-color:$color-highlight-background;
     color: $color-primary-foreground;
 
-    >h2
+    h2
     {
         text-align: center;
         font-size: 1.25rem;
@@ -155,15 +133,32 @@ section.content
     max-height: 60vh;
     background-color:$color-primary-background;
     
-
+    @media (orientation: landscape)
+    {
+        max-height: 50vh; 
+    }
    
     article
     {
         color:$color-primary-foreground;
-        padding: 8vh 0 0 10vw;
-        font-size: 1em;
+        padding: 8vh 0 3vh 10vw;
+        font-size: 0.8em;
         font-weight: bold;
         width: 80%;
+
+        p
+        {
+            font-size: 1.2em;
+            font-weight: bold;
+            color:white;
+            padding: 0;
+            margin: 0;
+
+            @media (orientation: landscape)
+            {
+                font-size: 0.75em;  
+            }
+        }
 
 
         /* personenanzahl */
@@ -173,7 +168,7 @@ section.content
             max-height: 19vh;
             padding: 5vh 25vw 0 33vw;
             .cls-1{fill:$color-primary-foreground;opacity: 0.25;}
-            .cls-2{font-size:0.35em; fill:$color-primary-foreground;}
+            .cls-2{font-size:0.75em; fill:$color-primary-foreground;}
          }
 
         #three
@@ -186,10 +181,17 @@ section.content
 
     div.number
     {
-        color: green; 
-        margin: 10vh 0 0 0;
+        color: red; 
+        margin: 8vh 0 0 0;
         width: 90vw;
+        height: 4vh;
         display: flex;
+
+        @media (orientation: landscape)
+        {
+            height: 7vh; 
+            margin: 5vh 0 0 0; 
+        }
      
 
         h3.flex-item1 
@@ -197,23 +199,30 @@ section.content
         {  
         background-color:$color-primary-foreground;
         opacity: 0.25;
+        font-size: 0.85em;
         padding: 1vh 0 1vh 10vw;
-        width: 35vw;
-        height:2vh;
-        font-size: 0.75em;
-    
+        width: 30vw;
           
+            @media (orientation: landscape)
+            {
+                font-size: 0.65em;  
+            }
         }
        
         h4.flex-item2 
         {
             background-color:$color-primary-foreground;
             opacity: 0.25;
+            font-size: 1em;
             margin:0;
             padding: 1vh 0 1vh 0;
             width: 15vw;
-            height:2vh;
             text-align: center;
+
+            @media (orientation: landscape)
+            {
+                font-size: 0.75em;  
+            }
         }
         
 
@@ -221,7 +230,6 @@ section.content
         {
             margin:0;
             font-size: 0.65em;
-            line-height: 2vh;
             padding: 1vh 0vw 1vh 5vw;
             color:$color-primary-foreground;
 
@@ -240,20 +248,44 @@ section.content
 
 section.room
 {
-    
-    #place
+    article
     {
-        font-size: 1rem;
-        font-weight: bold;
-        text-align: center;
-        padding: 4vh 0vw 1vh 0vw;
-    }
+        padding: 8vh 0 3vh 10vw;
    
-    #bold
-    {
-        font-weight: bold;
+
+        p
+        {
+            font-size: 1.2em;
+            font-weight: bold;
+            color:white;
+            padding: 2vh 0 2vh 0;
+            margin: 0;
+
+            @media (orientation: landscape)
+            {
+                font-size: 0.60em;  
+            }
+        }
+
+        #place
+        {
+            text-transform: uppercase;
+            font-size: 2rem;
+            font-weight: bold;
+            padding: 2vh 0vw 2vh 0vw;
+
+            @media (orientation: landscape)
+            {
+                font-size: 1.3em;  
+            }
+        }
+    
+        #bold
+        {
+            font-weight: bold;
+        }
     }
-        
+      
 }
 
 .Todo
@@ -271,6 +303,11 @@ section.room
         width: 80%;
         margin: 0;
     } 
+
+    @media (orientation: landscape)
+    {
+        font-size: 0.65em;  
+    }
 }
 
      
@@ -278,4 +315,7 @@ section.room
 #error
 {
     background-color: $color-highlight-background;
+    width: 100%;
+    margin:0;
+
 }
