app: fix display error on load

--- a/printer/App.cshtml
+++ b/printer/App.cshtml
@@ -21,7 +21,7 @@
     Laden ...
   </section>
 </div>
-<div id="error" style="display: block;">
+<div id="error" style="display: none;">
  <h2>Fehler aufgetreten!</h2>
  <p>Bitte begeben Sie sich in den Wartebereich!</p>
 </div>
