--- a/display/List3.cshtml
+++ b/display/List3.cshtml
@@ -1,4 +1,5 @@
 @using iSign
+@using ISS.Session
 @using System.Web.Optimization
 @using Stolltec.Forms.Model
 @using Stolltec.Vocatis
@@ -7,19 +8,28 @@
     var Model = new FormsModel(this);
 
     IEnumerable<DisplayNumber> list = new DisplayNumber[0];
+    IEnumerable<WaitNumber> waiting = new WaitNumber[0];
     HashSet<CommonGuidId> ids = new HashSet<CommonGuidId>();
-    for (int i = 1; i <= 8; i++)
+    using (var voc = SessionInstancesModule.GetInstance().UseSharedInstance<IVocatisData>())
     {
-        var name = "source" + i;
-        var id = (CommonGuidId)Model.Style[name].FieldInstance.Value;
-        if (id.IsEmpty || ids.Contains(id))
+        for (int i = 1; i <= 8; i++)
         {
-            continue;
+            var name = "source" + i;
+            var id = (CommonGuidId)Model.Style[name].FieldInstance.Value;
+            if (id.IsEmpty || ids.Contains(id))
+            {
+                continue;
+            }
+            ids.Add(id);
+
+            var called = voc.Instance.GetWaitQueueDisplay(id);
+            var queueList = from x in voc.Instance.GetWaitQueue(id)
+                            where ! called.Any(c=>c.Number == x.Number)
+                            select x;
+            list = list.Concat(called);
+            waiting = waiting.Concat(queueList);
         }
-        ids.Add(id);
-        list = list.Concat(Vocatis.GetWaitQueueList(id));
     }
-    list = list.Take(8);
     var cats = (CommonGuidId[])Model.Style["highlightcat"].FieldInstance.Value ?? new CommonGuidId[0];
 
     // the $.fn.vocatisList function requests the page to update the view
@@ -27,7 +37,7 @@
     var partial = Request["X-Requested-With"] == "XMLHttpRequest" || (Request.Headers != null && Request.Headers["X-Requested-With"] == "XMLHttpRequest");
 }
 
-@helper ItemsList(IEnumerable<DisplayNumber> list, CommonGuidId[] cats)
+@helper ItemsList(IEnumerable<DisplayNumber> list, IEnumerable<WaitNumber> waiting, CommonGuidId[] cats)
 {
     <table id="list">
         <tbody>
@@ -48,12 +58,29 @@
                     </td>
                 </tr>
             }
+            @foreach (var x in waiting)
+            {
+                <tr class="waiting">
+                    <td class="room">&nbsp;</td>
+                    <td class="number">
+                        @if (x.Categories.Any(cid => cats.Contains(cid.Id)))
+                        {
+                            <img src="termin.png" class="termin" alt="termin">
+                        }
+                        @if (!String.IsNullOrEmpty(x.IconUrl))
+                        {
+                            <img src="@Href(x.IconUrl)">
+                        }
+                        @x.Number
+                    </td>
+                </tr>
+            }
         </tbody>
     </table>
 }
 @if (partial)
 {
-    @ItemsList(list, cats)
+    @ItemsList(list, waiting, cats)
 }
 else
 {
@@ -71,7 +98,7 @@ else
         <h3>
             Wir beraten gerade
         </h3>
-        @ItemsList(list, cats)
+        @ItemsList(list, waiting, cats)
 
         @{
             var popup = Model.Style["popup"].FieldInstance.Value as string;
@@ -91,10 +118,10 @@ else
 
                 $("#list")
                     .vocatisList({
-                        interval: 2500
+                        interval: 2500,
                     })
                     .highlightNumbers({
-                        items: "tr:not(.spacer)",
+                        items: "tr:not(.waiting)",
                         call: function (items) {
                             var audio = document.getElementById("notify");
                             if (audio) audio.play();
@@ -107,7 +134,6 @@ else
                     });
             });
         </script>
-      
     </body>
 </html>
 }
