--- a/printer/PrinterTicket.cshtml
+++ b/printer/PrinterTicket.cshtml
@@ -24,7 +24,7 @@
     //voc.Instance.UpdateNumber(ticket);
   }
 
-@Scripts.Render("js/jquery.qrcode.js")
+@Scripts.Render("js/jquery.qrcode.js", "js/url_polyfill.js")
 <section class="ticket">
   <header>
   <h4>HERZLICH WILLKOMMEN</h4>
