ticket: hide img if empty

--- a/printer/PrinterTicket.cshtml
+++ b/printer/PrinterTicket.cshtml
@@ -35,7 +35,9 @@
   <h1>
     @ticket.Number
   </h1>
-  <img src="@Href(ticket.IconUrl)">
+  @if (!String.IsNullOrEmpty(ticket.IconUrl)) {
+    <img src="@Href(ticket.IconUrl)">
+  }
   <section class="qrcode">
     @if (withQrCode) {
     <a href="@Href("App.cshtml", new {id=ticket.Id, tracking_id})"></a>
