--- a/printer/P2_ThankYou.cshtml
+++ b/printer/P2_ThankYou.cshtml
@@ -35,6 +35,6 @@
   <h4>SO GEHT‘S WEITER.</h4>
   <div class="Todo">
     <p>Machen Sie es sich auf dem Sofa bequem.</p>
-    <p>Wir sind ruckzuck für Sie da.</p>
+    <p>Wir sind ruckzuck für Sie da!</p>
   </div>
 </div>
