--- a/printer/PrinterTicket.cshtml
+++ b/printer/PrinterTicket.cshtml
@@ -30,7 +30,7 @@
   <h4>HERZLICH WILLKOMMEN</h4>
   <h5>bei Ihrer Berliner Volksbank</h5>
   </header> 
-  <p>Machen Sie es sich kurz bequem.<br>Wir sind gleich pers&#246;nlich f&#252;r Sie da.</p>
+  <p>Machen Sie es sich kurz bequem.<br>Wir sind gleich pers&#246;nlich f&#252;r Sie da!</p>
   <p>Ihre Beratungs-Nr.</p>
   <h1>
     @ticket.Number
