--- a/printer/App.cshtml
+++ b/printer/App.cshtml
@@ -13,7 +13,7 @@
 
 <header>
  <img src="images/plattformlogo.png" class="plattformlogo" alt="plattformlogo">
- <h1><span style="text-transform:uppercase">Wartezeit</span>  Live-Abfrage</h1>
+ <h1><span style="text-transform:uppercase;font-weight: bold;"font-weight:bold;>Ihre Position </span>  Live-Abfrage</h1>
 </header>
 
 <div id="content" data-content-src="@Href("AppContent.cshtml", new {id=Request["id"]})">
